[package]
name = "pegasys-audit-engine"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
bytes = "1.5"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
rand = "0.8"

[build-dependencies]
prost-build = "0.12"
